# python_llm

./: .gitignore  AGENTS.md  README.md  coverage.xml  hello.py  pyproject.toml  requirements.txt  test_dummy_doctest.py
.github/workflows/: doctests.yml  flake8.yml  test.yml  test_integration.yml
python_llm/: __init__.py  chat.py  chat.py.save
python_llm/tools/: calculator.py  filesystem.py  search.py
python_llm_lucy.egg-info/: PKG-INFO  SOURCES.txt
test_grep_dir/: file1.txt
test_grep_dir/.hidden/: file3.txt
test_grep_dir/subdir/: file2.txt
test_write_dir/: code.py
tests/: test_chat.py
