[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-llm-lucy"
version = "0.1.0"
description = "My Python LLM project"
authors = [
  { name="Lucy", email="your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "groq"
]

[project.scripts]
chat = "python_llm.chat:repl"

[tool.flake8]
max-line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["python_llm*"]
exclude = ["test_projects*", "tests*"]
