[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-llm-lucy"
version = "0.1.0"
description = "My Python LLM project"
authors = [
  { name="Lucy", email="your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

`gitpython` isn't installed in the environment running your tests. Fix it:

```bash
pip install gitpython
```

Then add it to your `pyproject.toml` dependencies so it's always installed:

```toml

dependencies = [
  "requests",
  "groq",
  "gitpython"
]
```

[project.scripts]
chat = "python_llm.chat:repl"

[tool.flake8]
max-line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["python_llm*"]
exclude = ["test_projects*", "tests*"]
